--- a/package.json
+++ b/package.json
@@ -31,189 +31,43 @@
     "/index.{d.ts,d.ts.map,js,js.map}"
   ],
   "scripts": {
-    "build": "wireit",
-    "build:ts": "wireit",
-    "build:ts:std-decorators-tests": "wireit",
-    "build:ts:types": "wireit",
-    "build:rollup": "wireit",
-    "test": "wireit",
-    "test:dev": "wireit",
-    "test:prod": "wireit",
-    "checksize": "wireit"
-  },
-  "wireit": {
-    "build": {
-      "dependencies": [
-        "build:rollup",
-        "build:ts",
-        "build:ts:std-decorators-tests",
-        "build:ts:types",
-        "../lit:build",
-        "../reactive-element:build",
-        "../labs/testing:build"
-      ]
-    },
-    "build:ts": {
-      "command": "tsc --build --pretty",
-      "dependencies": [
-        "../lit:build:ts:types",
-        "../reactive-element:build:ts:types"
-      ],
-      "clean": "if-file-deleted",
-      "files": [
-        "tsconfig.json",
-        "src/**/*.ts",
-        "!src/test/std-decorators"
-      ],
-      "output": [
-        "development",
-        "!development/test/std-decorators",
-        "tsconfig.tsbuildinfo"
-      ]
-    },
-    "build:ts:std-decorators-tests": {
-      "#comment": "This is a separate script from build:ts because it needs a tsconfig without experimentalDecorators.",
-      "command": "tsc --pretty --project tsconfig.std-decorators-tests.json",
-      "clean": "if-file-deleted",
-      "dependencies": [
-        "build:ts"
-      ],
-      "files": [
-        "src/test/std-decorators/**/*.ts",
-        "tsconfig.std-decorators-tests.json"
-      ],
-      "output": [
-        "development/test/std-decorators",
-        "tsconfig.std-decorators-tests.tsbuildinfo"
-      ]
-    },
-    "build:ts:lit2-tests": {
-      "#comment": "Run this to install and build additional cross-version type tests.",
-      "command": "tsc --pretty --project tsconfig.lit2-tests.json",
-      "clean": "if-file-deleted",
-      "dependencies": [
-        "build:ts:lit2",
-        "install:lit2"
-      ],
-      "files": [
-        "src/test/**/*.ts",
-        "!src/test/std-decorators/**/*.ts",
-        "tsconfig.lit2-tests.json"
-      ],
-      "output": [
-        "lit2/context/test",
-        "tsconfig.lit2-tests.tsbuildinfo"
-      ]
-    },
-    "install:lit2": {
-      "command": "cd lit2/lit2-scope && npm ci",
-      "clean": "if-file-deleted",
-      "dependencies": [],
-      "files": [
-        "lit2/lit2-scope/package.json",
-        "lit2/lit2-scope/package-lock.json"
-      ],
-      "output": []
-    },
-    "build:ts:lit2": {
-      "#comment": "This is a separate script from build:ts because it needs a tsconfig that maps in lit@2.",
-      "command": "tsc --pretty --project tsconfig.lit2.json",
-      "clean": "if-file-deleted",
-      "dependencies": [
-        "build:ts"
-      ],
-      "files": [
-        "src/**/*.ts",
-        "!src/test/**/*.ts",
-        "tsconfig.lit2.json"
-      ],
-      "output": [
-        "lit2/lit2-scope/context",
-        "lit2/lit2-scope/tsconfig.lit2.tsbuildinfo"
-      ]
-    },
-    "build:ts:types": {
-      "command": "treemirror development . \"**/*.d.ts{,.map}\" \"!test\"",
-      "dependencies": [
-        "../internal-scripts:build",
-        "build:ts"
-      ],
-      "files": [],
-      "output": [
-        "*.d.ts{,.map}",
-        "lib/**/*.d.ts{,.map}"
-      ]
-    },
-    "build:rollup": {
-      "command": "rollup -c",
-      "dependencies": [
-        "build:ts"
-      ],
-      "files": [
-        "rollup.config.js",
-        "../../../rollup-common.js"
-      ],
-      "output": [
-        "index.js{,.map}",
-        "lib/**/*.js{,.map}"
-      ]
-    },
-    "checksize": {
-      "command": "rollup -c --environment=CHECKSIZE",
-      "dependencies": [
-        "build:ts"
-      ],
-      "files": [
-        "rollup.config.js",
-        "../../../rollup-common.js"
-      ],
-      "output": []
-    },
-    "test": {
-      "dependencies": [
-        "test:dev",
-        "test:prod"
-      ]
-    },
-    "test:dev": {
-      "command": "MODE=dev node ../tests/run-web-tests.js \"development/**/*_test.js\" --config ../tests/web-test-runner.config.js",
-      "dependencies": [
-        "build:ts",
-        "../tests:build"
-      ],
-      "env": {
-        "BROWSERS": {
-          "external": true
-        }
-      },
-      "files": [],
-      "output": []
-    },
-    "test:prod": {
-      "command": "MODE=prod node ../tests/run-web-tests.js \"development/**/*_test.js\" --config ../tests/web-test-runner.config.js",
-      "dependencies": [
-        "build",
-        "../tests:build"
-      ],
-      "env": {
-        "BROWSERS": {
-          "external": true
-        }
-      },
-      "files": [],
-      "output": []
-    }
+    "build": "npm run build:rollup && npm run build:ts && npm run build:ts:std-decorators-tests && npm run build:ts:types",
+    "build:ts": "tsc --build --pretty",
+    "build:ts:std-decorators-tests": "npm run build:ts && tsc --pretty --project tsconfig.std-decorators-tests.json",
+    "build:ts:types": "npm run build:ts && treemirror development . \"**/*.d.ts{,.map}\" \"!test\"",
+    "build:rollup": "npm run build:ts && rollup -c",
+    "test": "npm run test:dev && npm run test:prod",
+    "test:dev": "MODE=dev node ../tests/run-web-tests.js \"development/**/*_test.js\" --config ../tests/web-test-runner.config.js",
+    "test:prod": "MODE=prod node ../tests/run-web-tests.js \"development/**/*_test.js\" --config ../tests/web-test-runner.config.js",
+    "checksize": "npm run build:ts && rollup -c --environment=CHECKSIZE"
   },
   "author": "Frederic Collonval",
   "dependencies": {
-    "@lit/reactive-element": "^1.6.2 || ^2.0.0"
+    "@microsoft/fast-element": "^1.12.0"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
-    "@lit-internal/scripts": "^1.0.1",
-    "@lit-labs/testing": "^0.2.2",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-inject": "^5.0.2",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-virtual": "^2.1.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@types/trusted-types": "^2.0.2",
-    "lit": "^3.1.0"
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "rollup": "^2.76.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-sourcemaps": "^0.6.2",
+    "rollup-plugin-summary": "^1.4.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "~5.2.0"
   },
   "publishConfig": {
     "access": "public"
