--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "skipLibCheck": true,
     "composite": true,
     "target": "es2021",
     "module": "NodeNext",
@@ -21,6 +20,9 @@
     "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "paths": {
+      "@esm-bundle/chai": ["./local-types/@esm-bundle/chai/index.d.ts"]
+    },
     "types": ["mocha"]
   },
   "include": ["src/**/*.ts"],
