--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,27 +10,46 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
 
+    env:
+      PLAYWRIGHT_BROWSERS_PATH: ${{ github.workspace }}/pw-browsers
+
     steps:
-      - uses: actions/checkout@v4
+      - 
+        uses: actions/checkout@v4
       - name: Get npm cache directory
         id: npm-cache-dir
         shell: bash
         run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
-      - uses: actions/cache@v3
+      - 
+        uses: actions/cache@v3
         id: npm-cache
         with:
           path: ${{ steps.npm-cache-dir.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
-      - uses: actions/setup-node@v3
+            ${{ runner.os }}-node-    
+      - 
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/pw-browsers
+          key: ${{ runner.os }}-pw-${{ hashFiles('**/package-lock.json') }}
+      - 
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - run: |
+      - 
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+        run: |
           npm install
-      - run: |
+      - 
+        run: |
           npm run format:check
           npm run lint:check
-      - run: |
+      - 
+        run: |
           npm run build
+      - run: |
+          npx playwright install
           npm run test
