--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,5 +51,6 @@ jobs:
         run: |
           npm run build
       - run: |
-          npx playwright install
+          # Xref https://github.com/microsoft/playwright/issues/21990
+          npx playwright install --with-deps
           npm run test
