--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/webscit/fast-context"
   },
   "type": "module",
   "main": "index.js",
@@ -45,7 +45,15 @@
     "test_:prod": "MODE=prod node ../tests/run-web-tests.js \"development/**/*_test.js\" --config ../tests/web-test-runner.config.js",
     "checksize": "npm run build:ts && rollup -c --environment=CHECKSIZE"
   },
-  "author": "Frederic Collonval",
+  "author": {
+    "name": "Frederic Collonval"
+  },
+  "contributors": [
+    {
+      "name": "twiinIT",
+      "url": "https://twiinit.com"
+    }
+  ],
   "dependencies": {
     "@microsoft/fast-element": "^1.12.0"
   },
